# IKB

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  pytest.ini
backend/: database.py  main.py  models.py  requirements.txt  seed.py  test_endpoints.py
backend/config/: log_config.yaml
backend/routes/: alerts.py  chat.py  dashboard.py  documents.py  machines.py
backend/services/api_gateway/: main.py  pyproject.toml
backend/services/api_gateway/src/: app.py  config.py
backend/services/api_gateway/src/middleware/: auth.py  rate_limiter.py
backend/services/api_gateway/src/routers/: agents.py  query.py  telemetry.py
backend/services/api_gateway/src/schemas/: query.py
backend/services/api_gateway/src/websocket/: realtime_handler.py
backend/services/api_gateway/tests/: test_middleware.py
backend/services/knowledge_engine/: Dockerfile  __init__.py  main.py  requirements.txt
backend/services/knowledge_engine/agents/: base_agent.py  maintenance_agent.py  monitoring_agent.py  root_cause_agent.py
backend/services/knowledge_engine/api/: __init__.py  agents_router.py  dependencies.py  ingest_router.py  rag_router.py  router.py
backend/services/knowledge_engine/application/: __init__.py  orchestrator.py
backend/services/knowledge_engine/llm/: __init__.py  anthropic_client.py  base_llm_client.py  gemini_client.py
backend/services/knowledge_engine/memory/: __init__.py  episodic_memory.py
backend/services/knowledge_engine/tools/: base_tool.py  graph_tool.py  rag_tool.py  telemetry_tool.py
backend/services/telemetry_aggregator/: Dockerfile  __init__.py  main.py  requirements.txt
backend/services/telemetry_aggregator/api/: __init__.py  router.py  (+3 more)
backend/shared/infrastructure/: metrics.py
backend/shared/security/: __init__.py  dev_auth.py  rbac.py  tenant.py
backend/shared/utils/: circuit_breaker.py  logging.py
frontend/: .env.example  Dockerfile  bun.lockb  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppShell.tsx  BackendError.tsx  StatusBadge.tsx
frontend/src/hooks/: useConversations.ts  useQuery.ts
frontend/src/routes/: __root.tsx  alerts.tsx  chat.tsx  index.tsx  knowledge-base.tsx  machines.tsx  notifications.tsx  settings.tsx
infrastructure/docker/: Dockerfile.service
infrastructure/docker/migrations/: 001_initial_schema.sql  002_consolidated_architecture.sql  003_timescaledb.sql  004_performance_hardening.sql  005_missing_tables.sql  006_schema_alignment.sql
infrastructure/kubernetes/: api-gateway.yaml  config.yaml  knowledge-engine.yaml  telemetry-aggregator.yaml
scripts/: health_check.sh  seed_data.py
tests/: conftest.py
tests/integration/: test_knowledge_engine.py  test_telemetry_aggregator.py
tests/unit/: test_rag_tool.py
tests/unit/agent/: test_react_loop.py
tests/unit/knowledge_graph/: test_extractors.py
(+60 files in other folders)
