[tool.poetry]
name = "factory-ai-brain"
version = "0.1.0"
description = "Industrial Knowledge Brain — monorepo root"
authors = ["Factory AI Team <team@factory-ai.io>"]
readme = "README.md"
packages = [
    { include = "backend" },
    { include = "ai" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
ruff = "^0.4"
black = "^24.4"
mypy = "^1.10"
pre-commit = "^3.7"
locust = "^2.26"
httpx = "^0.27"
respx = "^0.21"
factory-boy = "^3.3"
faker = "^25.2"

[tool.poetry.group.shared.dependencies]
pydantic = "^2.7"
pydantic-settings = "^2.3"
fastapi = "^0.111"
uvicorn = { version = "^0.30", extras = ["standard"] }
aiokafka = "^0.10"
asyncpg = "^0.29"
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
alembic = "^1.13"
redis = { version = "^5.0", extras = ["hiredis"] }
opentelemetry-api = "^1.24"
opentelemetry-sdk = "^1.24"
opentelemetry-exporter-otlp = "^1.24"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-instrumentation-asyncpg = "^0.45b0"
opentelemetry-instrumentation-redis = "^0.45b0"
structlog = "^24.2"
orjson = "^3.10"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# ── Tool Configuration ──────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF", "SIM", "TCH", "ARG", "PTH", "ERA"]
ignore = ["S101", "B008"]

[tool.ruff.isort]
known-first-party = ["backend", "ai"]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "load: Load/performance tests",
]
