[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "IKB API Gateway — entry point for all client requests"
authors = ["Factory AI Team <team@factory-ai.io>"]
packages = [{ include = "backend", from = "../../.." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = { version = "^0.30", extras = ["standard"] }
pydantic = "^2.7"
pydantic-settings = "^2.3"
aiokafka = "^0.10"
redis = { version = "^5.0", extras = ["hiredis"] }
httpx = "^0.27"
structlog = "^24.2"
orjson = "^3.10"
opentelemetry-api = "^1.24"
opentelemetry-sdk = "^1.24"
opentelemetry-exporter-otlp = "^1.24"
opentelemetry-instrumentation-fastapi = "^0.45b0"
pyjwt = { version = "^2.8", extras = ["crypto"] }
websockets = "^12.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
